first draft of website

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ Lighter color: #5ed1db
 Lightest color: #e6eff0 -->
 <div class="navbar">
   <a href="index.html">Homepage</a>
-  <a href="coursework.html">Coursework</a>
-  <a href="activities.html">Activities</a>
-  <a href="thoughts.html">Thoughts</a>
+  <a href="mind.html">Mind</a>
+  <a href="hand.html">Hand</a>
+  <a href="heart.html">Heart</a>
   <a href="mailto:rujul@mit.edu" class="right">Contact</a>
 </div>
 
@@ -34,27 +34,30 @@ Lightest color: #e6eff0 -->
   <button type="submit">activities</button>
 </form>-->
 
-<!--<h3>Welcome. How can we help you today?</h3>-->
-<!--<h3>Hello! It's nice to see you here.</h3>-->
-
 <div class="row">
   <div class="side">
     <img src="coverimage.jpg" width=100% alt="Image may contain one (1) Rujul smiling and a fraction of the Stata center (MIT Bldg 32)">
   </div>
   <div class="main">
-    <p id="intro"> Hi! I'm an MIT '22 interested in linguistics, engineering, biology, and history. Check out my <a href="coursework.html">coursework</a> or what I do in <a href="activities.html">my 'free' time</a>.<br><br>This website is under construction.<!--Rujul is an emerging new brand of the MIT '22 cohort.-->
-      <!--<br><br> Regularly paving a global path from Pune, India to Cambridge, MA, our major interests here at Rujul lie at the nexus of  linguistics, biology, and computer science. <br> <br> Beyond academic solutions, we engage in smaller-scale ventures such as transferring words to paper or moving the body to rhythm.-->
+    <div class="textbox">
+    <p id="intro"> Hi, I'm Rujul [ऋजुल / rʊdʒʊl]<br /><br />
+
+      I enjoy thinking deeply about language, being on the move, engineering, and putting together ambitious projects. <br /><br /><small>I also enjoy talking to the Charles river, dark chocolate, light rain on a warm day, and interactions with small animals.</small><br /><br />
+
+      I am currently an MEng student, working in the <a href="https://aeroastro.mit.edu/realm/">Realm Lab</a> at MIT AeroAstro. At the time, my fascination with human language is manifesting as an <a href="mind.html">academic interest</a> in making language technology better and more accessible.<br /><br />
+
+      In my free time - well, there isn't very much of that. <a href="hand.html">Here is how I fill my non-academic time.</a>
     </p>
   </div>
+  </div>
 </div>
+<br />
 <center>
-<a href="resume.pdf"><button type="button" onlick="window.location.href='resume.pdf' download">CV</button></a>
-<button type="button" onclick="window.location.href='mailto:rujul@mit.edu'">Email</button>
+  <a href="rujul_gandhi_resume_2022.pdf"><button type="button">resume</button></a>
+  <button type="button" onclick="window.location.href='https://github.com/ruca-boka'">github</button>
+  <button type="button" onclick="window.location.href='mailto:rujul@mit.edu'">email</button>
 </center>
 
-<!--<div class="footer">
- <h4>Disclaimer: I am not a corporation, evil or otherwise. To ascertain whether I do speak like this in real life, you are welcome to <a href= "mailto:rujul@mit.edu">write to me</a>.</h4>
-</div>-->
 
 </body>
 </html>
