--- a/hand.html
+++ b/hand.html
@@ -6,7 +6,7 @@
   <title>Rujul's Website</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="personalwebsitestyle.css">
+  <link rel="stylesheet" type="text/css" href="personalwebsitestyle.css?version=1">
   <!--<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/hanken" type="text/css"/> -->
 </head>
 
@@ -27,7 +27,7 @@ Lightest color: #e6eff0 -->
 
 <div class="row">
 <div class="side">
-  <center><img src="sad_bw.png" width="60%"></center>
+  <center><img src="imgs/sad_bw.png" width="60%"></center>
 </div>
 <div class="main">
   <h3>Performing Art</h3>
@@ -47,11 +47,11 @@ Lightest color: #e6eff0 -->
 </div>
 
 <div class="side">
-  <center><img src="dance_ardhanareeshwar.png" width="60%"></center>
+  <center><img src="imgs/dance_ardhanareeshwar.png" width="60%"></center>
 </div>
 
 <div class="side">
-  <center><img src="row.png" width="60%"></center>
+  <center><img src="imgs/row.png" width="60%"></center>
 </div>
 
 <div class="main">
@@ -71,7 +71,7 @@ Lightest color: #e6eff0 -->
   </div>
 
   <div class="side">
-    <center><img src="splash.png" width="60%"></center>
+    <center><img src="imgs/splash.png" width="60%"></center>
   </div>
 </div>
 
