--- a/heart.html
+++ b/heart.html
@@ -6,7 +6,7 @@
   <title>Rujul's Website</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="personalwebsitestyle.css">
+  <link rel="stylesheet" type="text/css" href="personalwebsitestyle.css?version=1">
   <!--<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/hanken" type="text/css"/> -->
 </head>
 
@@ -28,7 +28,6 @@ Lightest color: #e6eff0 -->
 <div class="row">
   <div class="main">
     <div class="textbox">
-      <p>Links to some things that I find interesting, care about, or contribute to.</p>
 
       <p>Me in other places</p>
       <ul>
