--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Rujul's Website</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="personalwebsitestyle.css">
+
+  <link rel="stylesheet" type="text/css" href="personalwebsitestyle.css?version=1">
   <!--<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/hanken" type="text/css"/> -->
 </head>
 
@@ -36,7 +37,7 @@ Lightest color: #e6eff0 -->
 
 <div class="row">
   <div class="side">
-    <img src="coverimage.jpg" width=100% alt="Image may contain one (1) Rujul smiling and a fraction of the Stata center (MIT Bldg 32)">
+    <img src="imgs/coverimage.jpg" width=100% alt="Image may contain one (1) Rujul smiling and a fraction of the Stata center (MIT Bldg 32)">
   </div>
   <div class="main">
     <div class="textbox">
@@ -53,7 +54,7 @@ Lightest color: #e6eff0 -->
 </div>
 <br />
 <center>
-  <a href="rujul_gandhi_resume_2022.pdf"><button type="button">resume</button></a>
+  <a href="docs/rujul_gandhi_resume_2022.pdf"><button type="button">resume</button></a>
   <button type="button" onclick="window.location.href='https://github.com/ruca-boka'">github</button>
   <button type="button" onclick="window.location.href='mailto:rujul@mit.edu'">email</button>
 </center>
