--- a/mind.html
+++ b/mind.html
@@ -6,7 +6,7 @@
   <title>Rujul's Website</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="personalwebsitestyle.css">
+  <link rel="stylesheet" type="text/css" href="personalwebsitestyle.css?version=1">
   <!--<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/hanken" type="text/css"/> -->
 </head>
 
@@ -26,7 +26,7 @@ Lightest color: #e6eff0 -->
 <h2>Academic</h2>
 
 <center>
-<a href="rujul_gandhi_resume_2022.pdf"><button type="button">resume</button></a>
+<a href="docs/rujul_gandhi_resume_2022.pdf"><button type="button">resume</button></a>
 <button type="button" onclick="window.location.href='https://github.com/ruca-boka'">github</button>
 <button type="button" onclick="window.location.href='mailto:rujul@mit.edu'">email</button>
 </center>
@@ -44,7 +44,7 @@ Lightest color: #e6eff0 -->
   </div>
   <div class="side">
   <figure>
-    <img src="rujul-gandhi_bv20.jpg" width=100% alt="Image may contain one (1) Rujul sitting and a fraction of the Stata center (MIT Bldg 32)">
+    <img src="imgs/rujul-gandhi_bv20.jpg" width=100% alt="Image may contain one (1) Rujul sitting and a fraction of the Stata center (MIT Bldg 32)">
     <figcaption>Me in a (literal) corner of the Linguistics & Philosophy department at MIT.</figcaption>
   </figure>
   </div>
@@ -81,12 +81,12 @@ Lightest color: #e6eff0 -->
 
         <li>Noisy channel communication in case-based language<br />
           <small>A replication and extension of Poppels and Levy (2016)<br />
-             <a href="24905_paper.pdf">Final project</a> for 24.905 <i>Psycholinguistics Lab</i></small>
+             <a href="docs/24905_paper.pdf">Final project</a> for 24.905 <i>Psycholinguistics Lab</i></small>
            </li>
 
         <li>Proposing a model of phonological evolution using emergent communication<br />
-          <small><a href="6884_paper.pdf">Final project</a> for 6.884 <i>Doing Things with Words</i><br />
-                <a href="24918_paper.pdf">Final project</a> for 24.918 <i>Workshop in Linguistics Research</i></small>
+          <small><a href="docs/6884_paper.pdf">Final project</a> for 6.884 <i>Doing Things with Words</i><br />
+                <a href="docs/24918_paper.pdf">Final project</a> for 24.918 <i>Workshop in Linguistics Research</i></small>
           </li>
 
         <li> Handheld system for leaving audio messages in physical world locations <br />
@@ -94,7 +94,7 @@ Lightest color: #e6eff0 -->
          </li>
 
          <li>Brief Grammatical Sketch of Wolof, with a focus on Noun Classes<br />
-           <small><a href="24909_paper.pdf">Final project</a> for 24.909 <i>Fieldwork in Linguistics</i></small>
+           <small><a href="docs/24909_paper.pdf">Final project</a> for 24.909 <i>Fieldwork in Linguistics</i></small>
          </li>
 
       </ul>
