Update like everything

--- a/hand.html
+++ b/hand.html
@@ -65,8 +65,8 @@ Lightest color: #e6eff0 -->
   <div class="main">
     <h3>Recent Past</h3>
     <ul>
-      <li>The MIT Educational Studies Program - they organize Splash!</li>
-      <li>Jury & Board of the Asia Pacific Linguistics Olympiad</li>
+      <li>The MIT Educational Studies Program (<a href="https://esp.mit.edu">ESP</a>) - they organize Splash!</li>
+      <li>Jury & Board of the Asia Pacific Linguistics Olympiad (<a href="https://aplo.asia">APLO</a>) </li>
     </ul>
   </div>
 
