--- a/heart.html
+++ b/heart.html
@@ -28,16 +28,37 @@ Lightest color: #e6eff0 -->
 <div class="row">
   <div class="main">
     <div class="textbox">
+      <h3> About </h3>
+      <p> When I turned 21, I had spent exactly half my life in India and half in the US (neither continuously.) I'm slightly older now, and I live in Cambridge (MA), so... it's a delicate balance. When I think of home, I usually think of Pune, and of hills, traffic, and मिसळ!!!! But sometimes when I think of home, I think of Cambridge, and of the river, of colorful murals, and the energetic hustle of the universities nearby.</p>
 
-      <p>Me in other places</p>
+      <p> I love trying to do things that I don't really believe I can do. I do not like doing things that I don't want to do. However my bar for wanting to do something is not terribly high. Two truths and a lie: my sleep schedule is unreasonably precious to me, my Spotify Wrapped '22 features 22 languages, and I'm actually so bad at lying I just don't try.</p>
+  </div>
+</div>
+        <div class="side">
+        <figure>
+          <img src="imgs/sail.jpeg" width=100% alt="rujul is sailing">
+          <figcaption>not pictured: my brother sitting on the wrong side of the sailboat</figcaption>
+        </figure>
+        </div>
+
+    <div class="side">
+    <figure>
+      <img src="imgs/red.jpg" width=100% alt="rujul makes a face">
+      <figcaption>what are YOU looking at?</figcaption>
+    </figure>
+    </div>
+
+    <div class="main">
+      <div class="textbox">
+      <h4>Me in other places</h4>
       <ul>
-      <li>My emerging <a href="https://unheardword.substack.com/">Substack</a></li>
       <li>A <a href="https://news.mit.edu/2021/rujul-gandhi-student-1013">nice article</a> about me in the MIT News</li>
       <li> <a href="https://theshorttamperedclavier.github.io/">'The Short, Tampered Clavier'</a>, a mostly dormant blog I used to co-write with some friends</li>
       <li>My <a href="https://thetech.com/authors/rujul-gandhi">author page</a> from when I wrote and edited news for The Tech, MIT's student newspaper</li>
+      <li>A gradually emerging <a href="https://unheardword.substack.com/">Substack</a> and <a href="https://www.youtube.com/channel/UC9DYQ17OIXGgPutKPREsATg">Youtube</a></li>
       </ul>
 
-      <p>Volunteer opportunities that I think are cool</p>
+      <h4>Volunteer opportunities that I recommend</h4>
       <ul>
       <li><a href="https://tarjim.ly/en">Tarjimly</a>: on-demand interpretation for refugees<br />
          <small>If you are multilingual, you can volunteer anytime to translate for refugees, using just a smartphone app</small></li>
