--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ Lightest color: #e6eff0 -->
     <div class="textbox">
     <p id="intro"> Hi, I'm Rujul [ऋजुल / rʊdʒʊl]<br /><br />
 
-      I enjoy thinking deeply about language, being on the move, engineering, and putting together ambitious projects. <br /><br /><small>I also enjoy talking to the Charles river, dark chocolate, light rain on a warm day, and interactions with small animals.</small><br /><br />
+      I enjoy thinking deeply about language, being on the move, engineering, and putting together projects with teams of people. <br /><br /><small>I also enjoy talking to the Charles river, dark chocolate, light rain on a warm day, and interactions with small animals.</small><br /><br />
 
-      I am currently an MEng student, working in the <a href="https://aeroastro.mit.edu/realm/">Realm Lab</a> at MIT AeroAstro. At the time, my fascination with human language is manifesting as an <a href="mind.html">academic interest</a> in making language technology better and more accessible.<br /><br />
+      I am currently an MEng student studying NLP and working at the Reliable Autonomous systems Lab, MIT (ReALM). My fascination with human language is manifesting as an <a href="mind.html">academic interest</a> in making language technology better and more accessible.<br /><br />
 
       In my free time - well, there isn't very much of that. <a href="hand.html">Here is how I fill my non-academic time.</a>
     </p>
