--- a/mind.html
+++ b/mind.html
@@ -35,11 +35,12 @@ Lightest color: #e6eff0 -->
   <div class="main">
     <div class="textbox">
 
-    <p>Currently, I am an MEng student at MIT EECS.</p><br />
+    <p>I am an MEng student at MIT EECS. I was formerly affiliated with MIT Linguistics as an undergraduate, and I currently am affiliated with MIT AeroAstro as a part-time Research Assistant.</p><br />
 
-    <p>I work in the <a href="https://aeroastro.mit.edu/realm/">Reliable Autonomous systems Lab at MIT (REALM)</a>, supervised by  Chuchu Fan. People around me program robots to do useful things. I'm programming ways to <i>tell</i> robots to do useful things. Specifically, I am working on extracting actionable logical units from potentially ambiguous natural language requirements.</p><br />
+    <p>I work in the <a href="https://aeroastro.mit.edu/realm/">Reliable Autonomous systems Lab at MIT (REALM)</a>, supervised by Chuchu Fan. People around me program robots to do useful things. I'm programming ways to <i>tell</i> robots to do useful things. Specifically, I am working on extracting actionable logical units from potentially ambiguous natural language requirements.</p><br />
 
-    <p><small>In winter and spring 2023, I will also work part-time on best practices in the development of AI systems, in a cohort supervised by Elizabeth Bondi-Kelley and Crystal Lee. This is under the SERC (Social and Ethical Responsibilities of Computing) Scholars program by the MIT Schwarzmann College of Computing.</small></p>
+    <p><small>In winter and spring 2023, I will also work part-time on best practices in the development of AI systems, in a cohort supervised by Elizabeth Bondi-Kelley and Crystal Lee. This is part of the SERC (Social and Ethical Responsibilities of Computing) Scholars program by the MIT Schwarzmann College of Computing.</small></p>
+
   </div>
   </div>
   <div class="side">
@@ -61,9 +62,9 @@ Lightest color: #e6eff0 -->
           <small>what are the current capabilities of language modeling tools?<br />
             how can we evaluate them in comparison with human language perception? <br />
             what can computational models tell us about human language evolution?<br /></small></li>
-        <li> designing better language technology<br /><small>
+        <li> designing language technology<br /><small>
           how can we improve current language processing methods to work for low-resource settings and non-conventional communication?
-          <br /> at the social level, how can we leverage language technology to reduce communication barriers?</small></li>
+          <br /> at the social level, how can we actually employ language technology to reduce communication barriers?</small></li>
       </ul>
     </p>
   </div>
