Updates, reducing info

--- a/hand.html
+++ b/hand.html
@@ -23,7 +23,7 @@ Lightest color: #e6eff0 -->
 
 <body>
 <h1>Rujul Gandhi</h1>
-<h2>Activities</h2>
+<h2>Projects</h2>
 
 <div class="row">
 <div class="side">
@@ -51,7 +51,7 @@ Lightest color: #e6eff0 -->
 </div>
 
 <div class="side">
-  <center><img src="imgs/row.png" width="60%"></center>
+  <center><img src="imgs/firespin.png" width="60%"></center>
 </div>
 
 <div class="main">
