--- a/heart.html
+++ b/heart.html
@@ -31,7 +31,7 @@ Lightest color: #e6eff0 -->
       <h3> About </h3>
       <p> When I turned 21, I had spent exactly half my life in India and half in the US (neither continuously.) I'm slightly older now, and I live in Cambridge (MA), so... it's a delicate balance. When I think of home, I usually think of Pune, and of hills, traffic, and मिसळ!!!! But sometimes when I think of home, I think of Cambridge, and of the river, of colorful murals, and the energetic hustle of the universities nearby.</p>
 
-      <p> I love trying to do things that I don't really believe I can do. I do not like doing things that I don't want to do. However my bar for wanting to do something is not terribly high. Two truths and a lie: my sleep schedule is unreasonably precious to me, my Spotify Wrapped '22 features 22 languages, and I'm actually so bad at lying I just don't try.</p>
+      <!--<p> I love trying to do things that I don't really believe I can do. I do not like doing things that I don't want to do. However my bar for wanting to do something is not terribly high. Two truths and a lie: my sleep schedule is unreasonably precious to me, my Spotify Wrapped '22 features 22 languages, and I'm actually so bad at lying I just don't try.</p>-->
   </div>
 </div>
         <div class="side">
@@ -65,7 +65,7 @@ Lightest color: #e6eff0 -->
       <li><a href="https://esp.mit.edu">MIT Educational Studies Program</a><br />
         <small> Teach Anything to middle-school or high-school students at one of these annual MIT-student-run programs. <br />
           If you're not located near MIT, check out Learning Unlimited for similar programs or to start your own chapter.</small></li>
-    </ul>
+      </ul>
 
     </div>
   </div>
