--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Lightest color: #e6eff0 -->
 
 <div class="row">
   <div class="side">
-    <img src="imgs/coverimage.jpg" width=100% alt="Image may contain one (1) Rujul smiling and a fraction of the Stata center (MIT Bldg 32)">
+    <img src="imgs/coverimage.jpg" width=100% alt="Image contains one (1) Rujul smiling and a fraction of the Stata center (MIT Bldg 32)">
   </div>
   <div class="main">
     <div class="textbox">
@@ -47,7 +47,7 @@ Lightest color: #e6eff0 -->
 
       I am currently an MEng student studying NLP and working at the Reliable Autonomous systems Lab, MIT (ReALM). My fascination with human language is manifesting as an <a href="mind.html">academic interest</a> in making language technology better and more accessible.<br /><br />
 
-      In my free time - well, there isn't very much of that. <a href="hand.html">Here is how I fill my non-academic time.</a>
+      <!--In my free time - well, there isn't very much of that. <a href="hand.html">Here is how I fill my non-academic time.</a>-->
     </p>
   </div>
   </div>
