--- a/mind.html
+++ b/mind.html
@@ -39,8 +39,6 @@ Lightest color: #e6eff0 -->
 
     <p>I work in the <a href="https://aeroastro.mit.edu/realm/">Reliable Autonomous systems Lab at MIT (REALM)</a>, supervised by Chuchu Fan. People around me program robots to do useful things. I'm programming ways to <i>tell</i> robots to do useful things. Specifically, I am working on extracting actionable logical units from potentially ambiguous natural language requirements.</p><br />
 
-    <p><small>In winter and spring 2023, I will also work part-time on best practices in the development of AI systems, in a cohort supervised by Elizabeth Bondi-Kelley and Crystal Lee. This is part of the SERC (Social and Ethical Responsibilities of Computing) Scholars program by the MIT Schwarzmann College of Computing.</small></p>
-
   </div>
   </div>
   <div class="side">
@@ -51,7 +49,7 @@ Lightest color: #e6eff0 -->
   </div>
 
   <div class="main">
-    <h5>Future</h5>
+    <h5>Key Interests</h5>
     <div class="textbox">
     <p>I would like my academic or career trajectory to explore a subset of the following directions:<br />
       <ul>
@@ -71,9 +69,17 @@ Lightest color: #e6eff0 -->
   </div>
 
   <div class="main">
-      <h5>Past</h5>
+      <h5>Other</h5>
     <div class="textbox">
-      <p>Recently, I completed an SB at MIT in Linguistics and EECS. A sampling of classwork and academic projects over the years:</p>
+      <p>
+        <ul>
+          <li>social and ethical responsibilities of computing<br />
+            <small>I am part of a cohort studying best practices in the development of AI systems, supervised by Crystal Lee, as part of the SERC Scholars program by the MIT Schwarzmann College of Computing.</p></li>
+          <li> descriptive linguistics<br />
+          Undergraduate research project: a study of retroflex phoneme acoustics, focusing on language contact in the Indic and Dravidian language families of South Asia.<br />
+          <a href="docs/24909_paper.pdf">Final project</a> for 24.909 (Fieldwork in Linguistics): brief grammatical sketch of Wolof, with a focus on noun classes</li>
+        </ul>
+      <!--<p>Recently, I completed an SB at MIT in Linguistics and EECS. A sampling of classwork and academic projects over the years:
 
       <ul>
         <li>Study of retroflex phoneme acoustics<br />
@@ -99,7 +105,7 @@ Lightest color: #e6eff0 -->
          </li>
 
       </ul>
-    </p>
+    </p>-->
   </div>
   </div>
 </div>
