--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ Lighter color: #5ed1db
 Lightest color: #e6eff0 -->
 <div class="navbar">
   <a href="index.html">Homepage</a>
-  <a href="mind.html">Mind</a>
+  <!--<a href="mind.html">Mind</a>
   <a href="hand.html">Hand</a>
-  <a href="heart.html">Heart</a>
+  <a href="heart.html">Heart</a>-->
   <a href="mailto:rujul@mit.edu" class="right">Contact</a>
 </div>
 
@@ -43,9 +43,9 @@ Lightest color: #e6eff0 -->
     <div class="textbox">
     <p id="intro"> Hi, I'm Rujul [ऋजुल / rʊdʒʊl]<br /><br />
 
-      I enjoy thinking deeply about language, being on the move, engineering, and putting together projects with teams of people. <br /><br /><small>I also enjoy talking to the Charles river, dark chocolate, light rain on a warm day, and interactions with small animals.</small><br /><br />
+      I enjoy thinking about language(s), being on the move, engineering, and putting together projects with teams of people. <br /><br /><small>I also enjoy talking to water bodies, dark chocolate, light rain on a warm day, and interactions with small animals.</small><br /><br />
 
-      I am currently an MEng student studying NLP and working at the Reliable Autonomous systems Lab, MIT (ReALM). My fascination with human language is manifesting as an <a href="mind.html">academic interest</a> in making language technology better and more accessible.<br /><br />
+      I work as a research associate at the <a href="https://changlab.ucsf.edu">Chang Lab</a> at UC San Francisco, studying how the brain understands speech.<br /><br />Most recently, I finished my M.Eng. at MIT where I implemented natural language processing systems at the <a href="https://aeroastro.mit.edu/realm/">Reliable Autonomous systems Lab</a>.<br /><br />
 
       <!--In my free time - well, there isn't very much of that. <a href="hand.html">Here is how I fill my non-academic time.</a>-->
     </p>
@@ -56,7 +56,7 @@ Lightest color: #e6eff0 -->
 <center>
   <a href="docs/rujul_gandhi_resume_2022.pdf"><button type="button">resume</button></a>
   <button type="button" onclick="window.location.href='https://github.com/ruca-boka'">github</button>
-  <button type="button" onclick="window.location.href='mailto:rujul@mit.edu'">email</button>
+  <button type="button" onclick="window.location.href='mailto:rujul.gandhi@ucsf.edu'">email</button>
 </center>
 
 
