--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Lightest color: #e6eff0 -->
 </div>
 <br />
 <center>
-  <a href="docs/rujul_gandhi_resume_2022.pdf"><button type="button">resume</button></a>
+  <a href="docs/Resume.pdf"><button type="button">resume</button></a>
   <button type="button" onclick="window.location.href='https://github.com/ruca-boka'">github</button>
   <button type="button" onclick="window.location.href='mailto:rujul.gandhi@ucsf.edu'">email</button>
 </center>
