change description on main page

--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@ Lightest color: #e6eff0 -->
     <div class="textbox">
     <p id="intro"> Hi, I'm Rujul [ऋजुल / rʊdʒʊl]<br /><br />
 
-      I enjoy thinking about language(s), being on the move, engineering, and putting together projects with teams of people. <br /><br /><small>I also enjoy talking to water bodies, dark chocolate, light rain on a warm day, and interactions with small animals.</small><br /><br />
+      I enjoy thinking about language(s), being on the move, engineering, and putting together projects with teams of people. <br /><br /><small>I also enjoy talking to water bodies, dark chocolate, and light rain on a warm day.</small><br /><br />
 
       I work as a research associate at the <a href="https://changlab.ucsf.edu">Chang Lab</a> at UC San Francisco, studying how the brain understands speech.<br /><br />Most recently, I finished my M.Eng. at MIT where I implemented natural language processing systems at the <a href="https://aeroastro.mit.edu/realm/">Reliable Autonomous systems Lab</a>.<br /><br />
 
+      Outside of the lab, I cox for (and occasionally row with) the <a href="https://www.pacificrowingclub.org/mastersprogram">Pacific Rowing Club</a>.
       <!--In my free time - well, there isn't very much of that. <a href="hand.html">Here is how I fill my non-academic time.</a>-->
     </p>
   </div>
