--- a/index.html
+++ b/index.html
@@ -1,4 +1,42 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Rujul's Website</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="left-side-cover">
+    <img src="imgs/rujul_gandhi.png" width=50% alt="Image contains one (1) Rujul smiling and a fraction of the Stata center (MIT Bldg 32)" class="profile-img">
+  </div>
+  <div class="right-side">
+  <!--<div class="index-page-text">-->
+    <h1>Rujul Gandhi</h1>
+    <h2>[ऋजुल / rʊdʒʊl]</h2>
+    <br>
+    <!--<p></p>
+    <br>-->
+    <p>I'm studying how our brains make sense of speech! Currently, I work as a research associate in the <a href="https://changlab.ucsf.edu">Chang Lab</a> at UC San Francisco. I've been using artificial neural networks to model neural activations in response to spoken language, and working on making the results of this emerging paradigm more interpretable.</p>
+    <br>
+    <p>In 2023, I finished an M.Eng. at MIT where I implemented natural language processing systems for robots at the <a href="https://aeroastro.mit.edu/realm/">Reliable Autonomous systems Lab</a>. Prior, I completed my S.B. in linguistics and EECS at MIT.</p>
+    <br>
+    <p>I enjoy thinking about language(s), being on the move, engineering, and putting together projects with teams of people. Other significant interests include rowing (shoutout Pacific Rowing Club), co-operative living, and Indian classical dance.</p>
+    <br>
+    <p><a href="docs/Resume-3.pdf">CV</a> // 
+    <a href="projects.html">Activities</a> //
+    <a href="mailto:rujul.gandhi@ucsf.edu">Contact</a></p>
+
+  </div>
+
+</body>
+</html>
+
+
+
+
+<!--<!DOCTYPE html>
 
 <html>
 
@@ -8,24 +46,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" type="text/css" href="personalwebsitestyle.css?version=1">
-  <!--<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/hanken" type="text/css"/> -->
 </head>
 
-<!-- Dark color: #015961
+Dark color: #015961
 Lighter color: #5ed1db
-Lightest color: #e6eff0 -->
+Lightest color: #e6eff0
 <div class="navbar">
   <a href="index.html">Homepage</a>
-  <!--<a href="mind.html">Mind</a>
+  <a href="mind.html">Mind</a>
   <a href="hand.html">Hand</a>
-  <a href="heart.html">Heart</a>-->
+  <a href="heart.html">Heart</a>
   <a href="mailto:rujul@mit.edu" class="right">Contact</a>
 </div>
 
 <body>
 <h1>Rujul Gandhi</h1>
 
-<!--<form action="">
+<form action="">
   <button type="submit">homepage</button>
 </form>
 <form action="https://www.mit.edu/~rujul/">
@@ -33,7 +70,7 @@ Lightest color: #e6eff0 -->
 </form>
 <form action="https://www.mit.edu/~rujul/">
   <button type="submit">activities</button>
-</form>-->
+</form>
 
 <div class="row">
   <div class="side">
@@ -46,9 +83,6 @@ Lightest color: #e6eff0 -->
       I enjoy thinking about language(s), being on the move, engineering, and putting together projects with teams of people. <br /><br /><small>I also enjoy talking to water bodies, dark chocolate, light rain on a warm day, and interactions with small animals.</small><br /><br />
 
       I work as a research associate at the <a href="https://changlab.ucsf.edu">Chang Lab</a> at UC San Francisco, studying how the brain understands speech.<br /><br />Most recently, I finished my M.Eng. at MIT where I implemented natural language processing systems at the <a href="https://aeroastro.mit.edu/realm/">Reliable Autonomous systems Lab</a>.<br /><br />
-
-      <!--In my free time - well, there isn't very much of that. <a href="hand.html">Here is how I fill my non-academic time.</a>-->
-    </p>
   </div>
   </div>
 </div>
@@ -61,4 +95,4 @@ Lightest color: #e6eff0 -->
 
 
 </body>
-</html>
+</html>-->
