--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <br>
     <!--<p></p>
     <br>-->
-    <p>I'm studying how our brains make sense of speech! Currently, I work as a research associate in the <a href="https://changlab.ucsf.edu">Chang Lab</a> at UC San Francisco. I've been using artificial neural networks to model neural activations in response to spoken language, and working on making the results of this emerging paradigm more interpretable.</p>
+    <p>I'm studying how our brains understand speech! Currently, I work as a research associate in the <a href="https://changlab.ucsf.edu">Chang Lab</a> at UC San Francisco. I've been using artificial neural networks to model neural activations in response to spoken language, and working on making the results of this emerging paradigm more interpretable.</p>
     <br>
     <p>In 2023, I finished an M.Eng. at MIT where I implemented natural language processing systems for robots at the <a href="https://aeroastro.mit.edu/realm/">Reliable Autonomous systems Lab</a>. Prior, I completed my S.B. in linguistics and EECS at MIT.</p>
     <br>
