add navbar, fix spacing a bit

--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
   <title>Rujul's Website</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
+
+
 <body>
+
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="projects.html">Activities</a>
+        <!--<a href="mailto:rujul@mit.edu" class="right">Contact</a>-->
+    </div>
+
   <div class="left-side-cover">
-    <img src="imgs/rujul_gandhi.png" width=50% alt="Image contains one (1) Rujul smiling and a fraction of the Stata center (MIT Bldg 32)" class="profile-img">
+        <img src="imgs/rujul_gandhi.png" width=50% alt="Image contains one (1) Rujul smiling and a fraction of the Stata center (MIT Bldg 32)" class="profile-img">
   </div>
   <div class="right-side">
   <!--<div class="index-page-text">-->
@@ -22,11 +32,11 @@
     <br>
     <p>In 2023, I finished an M.Eng. at MIT where I implemented natural language processing systems for robots at the <a href="https://aeroastro.mit.edu/realm/">Reliable Autonomous systems Lab</a>. Prior, I completed my S.B. in linguistics and EECS at MIT.</p>
     <br>
-    <p>I enjoy thinking about language(s), being on the move, engineering, and putting together projects with teams of people. Other significant interests include rowing (shoutout Pacific Rowing Club), co-operative living, and Indian classical dance.</p>
+    <p>I enjoy thinking about language(s), being on the move, engineering, and putting together projects with teams of people. Other significant interests include rowing (Tech on two!), co-operative living, and Indian classical dance.</p>
     <br>
     <p><a href="docs/Resume-3.pdf">CV</a> // 
     <a href="projects.html">Activities</a> //
-    <a href="mailto:rujul.gandhi@ucsf.edu">Contact</a></p>
+    <a href="mailto:rujul.gandhi@ucsf.edu">Email</a></p>
 
   </div>
 
