--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="projects.html">Activities</a>
+        <!--<a href="mailto:rujul@mit.edu" class="right">Contact</a>-->
+    </div>
+
   <div class="left-side">
     <h1>Research</h1>
     <h2>Thoughts</h2>
@@ -30,7 +37,7 @@
     <p><b>Studying individual neuron responses to speech</b></p>
     <p>Current questions: Can artificial neural network encodings model brain responses to speech? What aspects of the ANNs contribute to modeling ability? How is the neural encoding of speech information distributed?</p>
     <p><a href="https://2024.ccneuro.org/pdf/408_Paper_authored_CCN_2024_NP_Context-3.pdf">CCN Conference Abstract</a></p><br />
-    <p>Future questions: What is the role of probabilistic computations in speech processing, and how do they manifest at the neural level? How does information flow through the brain networks that process speech and language? How do neural circuits distinguish speech from background sound, comprehensible speech from incomprehensible speech, and so on? C</p>
+    <p>Future questions: What is the role of probabilistic computations in speech processing, and how do they manifest at the neural level? How does information flow through the brain networks that process speech and language? How do neural circuits distinguish speech from background sound, comprehensible speech from incomprehensible speech, and so on?</p>
    
     <h2>Past</h2>
     <p><b>Translating English instructions into temporal logic</b></p>
@@ -44,11 +51,12 @@
   <!--<div class="index-page-text">-->
     <h1>Other</h1>
     <h2>Current</h2>
-    <p><b>Rowing</b></p>
-    <p>Currently a coxswain for the Pacific Rowing Club Masters.</p>
+    <h3>Rowing</h3>
+    <p>Currently coxing for the Pacific Rowing Club's Masters program!</p>
     <p>In the past, coxed for the MIT Rowing Club (2023) and rowed with the MIT Lightweight Women (2021-2023).</p><br>
-    <p><b>Making problem sets for high school linguistics contests</b></p>
-    <p>Currently (2023-2025) leading the problem committee for the <a href="https://ltrc.iiit.ac.in/plo/">Panini (Indian National) Linguistics Olympiad.</a> Previously (2019-2021), led the international jury for the <a href="https://aplo.asia/">Asia-Pacific Linguistics Olympiad</a>. We try to design fun and challenging logic puzzles that introduce students to the intricate ways a language can work! See above links to register (or for funsies).</p><br>
+    <h3>Linguistics contest problem design</h3>
+    <p>Currently (2023-2025) leading the problem committee for the <a href="https://ltrc.iiit.ac.in/plo/">Panini (Indian National) Linguistics Olympiad.</a> Previously (2019-2021), led the international jury for the <a href="https://aplo.asia/">Asia-Pacific Linguistics Olympiad</a>.</p> 
+    <p>We try to design fun and challenging logic puzzles that introduce students to the intricate ways a language can work! See above links to register (or for funsies).</p><br>
 
     <h4>On the Internet</h4>
       <ul>
