fix split screen centering

--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
         <!--<a href="mailto:rujul@mit.edu" class="right">Contact</a>-->
     </div>
 
-  <div class="left-side-cover">
-        <img src="imgs/rujul_gandhi.png" width=50% alt="Image contains one (1) Rujul smiling and a fraction of the Stata center (MIT Bldg 32)" class="profile-img">
-  </div>
+  <div class="left-side">
+    <div class="cover">
+        <img src="imgs/rujul_gandhi.png" alt="Image contains one (1) Rujul smiling and a fraction of the Stata center (MIT Bldg 32)" class="profile-img">
+    </div>
+    
+    </div>
   <div class="right-side">
   <!--<div class="index-page-text">-->
     <h1>Rujul Gandhi</h1>
