--- a/projects.html
+++ b/projects.html
@@ -52,8 +52,9 @@
     <h1>Other</h1>
     <h2>Current</h2>
     <h3>Rowing</h3>
-    <p>Currently coxing for the Pacific Rowing Club's Masters program!</p>
+    <p>Currently a coxswain for the Pacific Rowing Club's Masters program!</p>
     <p>In the past, coxed for the MIT Rowing Club (2023) and rowed with the MIT Lightweight Women (2021-2023).</p><br>
+    
     <h3>Linguistics contest problem design</h3>
     <p>Currently (2023-2025) leading the problem committee for the <a href="https://ltrc.iiit.ac.in/plo/">Panini (Indian National) Linguistics Olympiad.</a> Previously (2019-2021), led the international jury for the <a href="https://aplo.asia/">Asia-Pacific Linguistics Olympiad</a>.</p> 
     <p>We try to design fun and challenging logic puzzles that introduce students to the intricate ways a language can work! See above links to register (or for funsies).</p><br>
