--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
     <h2>Current</h2>
     <p><b>Studying individual neuron responses to speech</b></p>
     <p>Current questions: Can artificial neural network encodings model brain responses to speech? What aspects of the ANNs contribute to modeling ability? How is the neural encoding of speech information distributed?</p>
-    <p><a href="https://2024.ccneuro.org/pdf/408_Paper_authored_CCN_2024_NP_Context-3.pdf">CCN Conference Abstract</a></p><br />
+    <p><a href="https://2024.ccneuro.org/pdf/408_Paper_authored_CCN_2024_NP_Context-3.pdf">CCN 2024 Conference Abstract</a></p><br />
     <p>Future questions: What is the role of probabilistic computations in speech processing, and how do they manifest at the neural level? How does information flow through the brain networks that process speech and language? How do neural circuits distinguish speech from background sound, comprehensible speech from incomprehensible speech, and so on?</p>
    
     <h2>Past</h2>
@@ -52,37 +52,36 @@
     <h1>Other</h1>
     <h2>Current</h2>
     <h3>Rowing</h3>
-    <p>Currently a coxswain for the Pacific Rowing Club's Masters program!</p>
-    <p>In the past, coxed for the MIT Rowing Club (2023) and rowed with the MIT Lightweight Women (2021-2023).</p><br>
+    <p>I spend frequent mornings on Lake Merced with the <a href="https://www.pacificrowingclub.org/prcmastersprogram">Pacific Rowing Club!</a></p>
+    <p>Previously, I coxed for the MIT Rowing Club (2023) and rowed with the MIT Lightweight Women (2021-2023).</p><br>
     
-    <h3>Linguistics contest problem design</h3>
-    <p>Currently (2023-2025) leading the problem committee for the <a href="https://ltrc.iiit.ac.in/plo/">Panini (Indian National) Linguistics Olympiad.</a> Previously (2019-2021), led the international jury for the <a href="https://aplo.asia/">Asia-Pacific Linguistics Olympiad</a>.</p> 
-    <p>We try to design fun and challenging logic puzzles that introduce students to the intricate ways a language can work! See above links to register (or for funsies).</p><br>
+    <h3>Linguistics contest problem set design</h3>
+    <p>Currently leading the problem committee for the <a href="https://ltrc.iiit.ac.in/plo/">Panini (Indian National) Linguistics Olympiad.</a> In the past, led the international jury for the <a href="https://aplo.asia/">Asia-Pacific Linguistics Olympiad</a>.</p> 
+    <p>We try to make fun and challenging logic puzzles featuring the intricate ways a language can work! See above links to register (or for funsies).</p><br>
 
-    <h4>On the Internet</h4>
+    <h3>On the Internet</h3>
       <ul>
-      <li>A <a href="https://news.mit.edu/2021/rujul-gandhi-student-1013">nice article</a> about me in the MIT News</li>
+      <li>An <a href="https://news.mit.edu/2021/rujul-gandhi-student-1013">old-ish profile</a> in the MIT News (2021)</li>
+      <li>A gradually emerging <a href="https://unheardword.substack.com/">Substack</a><!-- and <a href="https://www.youtube.com/channel/UC9DYQ17OIXGgPutKPREsATg">Youtube</a></li>-->
       <li> <a href="https://theshorttamperedclavier.github.io/">'The Short, Tampered Clavier'</a>, a mostly dormant blog I used to co-write with some friends</li>
       <li>My <a href="https://thetech.com/authors/rujul-gandhi">author page</a> from when I wrote and edited news for The Tech, MIT's student newspaper</li>
-      <li>A gradually emerging <a href="https://unheardword.substack.com/">Substack</a> and <a href="https://www.youtube.com/channel/UC9DYQ17OIXGgPutKPREsATg">Youtube</a></li>
       </ul><br>
 
-      <h4>Volunteer opportunities that I recommend</h4>
-      <ul>
-      <li><a href="https://tarjim.ly/en">Tarjimly</a>: on-demand interpretation for refugees<br />
-         <small>If you are multilingual, you can volunteer anytime to translate for refugees, using just a smartphone app</small></li>
+      <h3>Volunteer opportunities that I recommend</h3>
+      <p><a href="https://tarjim.ly/en">Tarjimly</a>: on-demand interpretation for refugees<br />
+         <small>If you are multilingual, you can volunteer anytime to translate for refugees, using just a smartphone app</small></p>
       <li><a href="https://esp.mit.edu">MIT Educational Studies Program</a><br />
         <small> Teach Anything to middle-school or high-school students at one of these annual MIT-student-run programs. <br />
           If you're not located near MIT, check out Learning Unlimited for similar programs or to start your own chapter.</small></li>
       </ul><br>
 
 
-    <h2>Past</h2>
-    <p><b>Performing Art</b></p>
+    <h2>Recent Past</h2>
+    <h3>Performing Art</h3>
     <p>Founded MIT Nritya, a community for Indian classical dancers at MIT.</p>
     <p>Played with fire with the MIT Spinning Arts club.</p>
     <br>
-    <p><b>Education</b></p>
+    <h3>Education</h3>
     <p>Organized grade school programs like Splash, Spark, and Summer HSSP via the MIT Educational Studies Program.</p>
     <p>Taught middle-school level introduction courses on machine learning & AI at the Valley School of Ligonier and the Hun School of Princeton, via Inspirit AI.</p><br>
     <!--<p><b>Writing</b></p>
