--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <br>
     <!--<p></p>
     <br>-->
-    <p>I'm studying how our brains understand speech! Currently, I work as a research associate in the <a href="https://changlab.ucsf.edu">Chang Lab</a> at UC San Francisco. I've been using artificial neural networks to model real neurons responding to spoken language, and working on making the results of this emerging paradigm more interpretable.</p>
+    <p>I'm studying how our brains understand speech! Currently, I am a PhD student in the <a href="https://shbtphd.hms.harvard.edu/">SHBT</a> program at Harvard. Before this, I was a research associate in the <a href="https://changlab.ucsf.edu">Chang Lab</a> at UC San Francisco. There, I was using artificial neural networks to model real neurons responding to spoken language, and working on making the results of this emerging paradigm more interpretable.</p>
     <br>
     <p>In 2023, I finished an M.Eng. at MIT where I implemented natural language processing systems for robots at the <a href="https://aeroastro.mit.edu/realm/">Reliable Autonomous systems Lab</a>. Prior, I completed my S.B. in linguistics and EECS at MIT.</p>
     <br>
     <p>I enjoy thinking about language(s), engineering, and putting together projects with teams of people. Other interests include rowing, co-operative living, and Indian classical dance.</p>
     <br>
-    <p><a href="docs/Resume-3.pdf">CV</a> // 
+    <p><a href="docs/Resume-4.pdf">CV</a> // 
     <a href="projects.html">Activities</a> //
     <a href="mailto:rujul.gandhi@ucsf.edu">Email</a></p>
 
